buildpacks/dotnet/src/snapshots/sdk_layer_read_archive_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - foo bar baz

[0;31m! Error reading downloaded SDK archive[0m
[0;31m![0m
[0;31m! An unexpected I/O error occurred while calculating checksum for the downloaded .NET SDK archive.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build. If the[0m
[0;31m! issue persists, file an issue here:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet/issues/new[0m
